# mlops_course

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
lesson0/: README.md
lesson1/: README.md
lesson2/: Dockerfile  README.md
lesson2/app/: run.py
lesson3/: README.md  train.py
lesson3/app/: main.py  run.py
lesson3/models/: model.pkl
shared_code/src/models/: custom_models.py
