[metadata]
name = mlops
description = source code for mlops course
author = manualrg
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    src
install_requires =
    scikit-learn>=1
python_requires = >=3.6
package_dir =
    =shared_code
zip_safe = no